--- a/index (1).html
+++ b/index (1).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Menu</title>
-    <link rel="stylesheet" href="css/style.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="css/style.css"> <!-- Ensure this path matches your structure -->
 </head>
 <body>
     <h1>Our Menu</h1>
@@ -12,7 +12,7 @@
         <div class="container">
             <h3>Chicken</h3>
             <p>
-                Блюда из курицы любят и ценят по всему миру. Каждый сможет сразу же вспомнить свое любимое блюдо из этого вида птицы. Прежде всего, курицу можно просто обжарить с большим количеством специй (или без них), в луке, помидорах и паприке. Кроме того, существует масса вариантов приготовления курицы в рукаве для запекания с различными соусами. Но больше всего хозяйкам нравятся аппетитные простые рецепты из курицы.
+                Блюда из курицы любят и ценят по всему миру. Каждый сможет сразу же вспомнить свое любимое блюдо из этого вида птицы. Прежде всего, курицу можно просто обжарить с большим количеством специй (или без них), в луке, помидорах и паприке.
             </p>
         </div>
     </section>
@@ -21,7 +21,7 @@
         <div class="container">
             <h3>Beef</h3>
             <p>
-                Прежде чем готовить стейк, нужно правильно выбрать мясо. От этого зависит половина успеха. Не секрет, что это блюдо достаточно капризное и требует определённой сноровки. Иначе вместо сочащегося ароматного мяса можно получить что-то практически несъедобное. Свежая говядина сразу после забоя для стейков не подойдёт. Конечно, попробовать можете, но блюдо получится зуболомным из-за своей жёсткости. Поэтому мясо для стейков подготавливают специальным образом — оно вызревает определенный период времени при температуре немного выше 0°С. В результате этого ферментативного процесса мясо для стейков становится нежным и мягким.
+                Прежде чем готовить стейк, нужно правильно выбрать мясо. От этого зависит половина успеха. Не секрет, что это блюдо достаточно капризное и требует определённой сноровки.
             </p>
         </div>
     </section>
@@ -30,7 +30,7 @@
         <div class="container">
             <h3>Sushi</h3>
             <p>
-                В данном рецепте я покажу, как приготовить самые простые роллы в домашних условиях - маки роллы. Если вы думаете, что приготовление роллов сложный процесс, вы сильно ошибаетесь, - на самом деле готовятся они просто! Ну а если вы не знаете, с каких именно роллов начать, то я бы рекомендовал приготовить именно маки роллы! Конкретно в этом рецепте я готовлю маки роллы с лососем, однако вы легко можете изменить начинку, например сделать роллы с тунцом, авокадо, огурцами или отварными креветками.
+                В данном рецепте я покажу, как приготовить самые простые роллы в домашних условиях - маки роллы. Если вы думаете, что приготовление роллов сложный процесс, вы сильно ошибаетесь, - на самом деле готовятся они просто!
             </p>
         </div>
     </section>
