--- a/index (1).html
+++ b/index (1).html
@@ -4,34 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Menu</title>
-    <link rel="stylesheet" href="css/style.css"> <!-- Ensure this path matches your structure -->
+    <link rel="stylesheet" href="css/style (1).css"> <!-- Link to style.css -->
 </head>
 <body>
     <h1>Our Menu</h1>
     <section class="col-lg-4 col-md-6 col-sm-12">
         <div class="container">
             <h3>Chicken</h3>
-            <p>
-                Блюда из курицы любят и ценят по всему миру. Каждый сможет сразу же вспомнить свое любимое блюдо из этого вида птицы. Прежде всего, курицу можно просто обжарить с большим количеством специй (или без них), в луке, помидорах и паприке.
-            </p>
+            <p>Sample description of Chicken dish.</p>
         </div>
     </section>
-
     <section class="col-lg-4 col-md-6 col-sm-12">
         <div class="container">
             <h3>Beef</h3>
-            <p>
-                Прежде чем готовить стейк, нужно правильно выбрать мясо. От этого зависит половина успеха. Не секрет, что это блюдо достаточно капризное и требует определённой сноровки.
-            </p>
+            <p>Sample description of Beef dish.</p>
         </div>
     </section>
-
     <section class="col-lg-4 col-md-12 col-sm-12">
         <div class="container">
             <h3>Sushi</h3>
-            <p>
-                В данном рецепте я покажу, как приготовить самые простые роллы в домашних условиях - маки роллы. Если вы думаете, что приготовление роллов сложный процесс, вы сильно ошибаетесь, - на самом деле готовятся они просто!
-            </p>
+            <p>Sample description of Sushi dish.</p>
         </div>
     </section>
 </body>
