--- a/index (1).html
+++ b/index (1).html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Menu</title>
-    <link rel="stylesheet" href="css/style (1).css"> <!-- Link to style.css -->
+    <link rel="stylesheet" href="style (1).css"> <!-- Link to style.css -->
 </head>
 <body>
     <h1>Our Menu</h1>
